--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="icon" href="./float_logo.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
